WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268362
Unthrottled IPC::Connection loses messages when connection is closed
https://bugs.webkit.org/show_bug.cgi?id=268362
Summary
Unthrottled IPC::Connection loses messages when connection is closed
Kimmo Kinnunen
Reported
2024-01-29 23:41:56 PST
IPC::Connection loses messages when connection is closed (receive side, normal case)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 23:42:09 PST
<
rdar://problem/121910136
>
Kimmo Kinnunen
Comment 2
2024-01-30 02:30:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23499
EWS
Comment 3
2024-01-31 12:45:00 PST
Committed
273851@main
(d1fb58818ff3): <
https://commits.webkit.org/273851@main
> Reviewed commits have been landed. Closing PR #23499 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug