Source/WebKit/Platform/IPC/Connection.cpp
@@ -476,6 +476,19 @@ bool Connection::platformPrepareForOpen()
 }
 #endif
 
+Error Connection::flushSentMessages(Timeout timeout)
+{
+    Locker locker { m_outgoingMessagesLock };
+    do {
+        if (!isValid())
+            return Error::InvalidConnection;
+        if (m_outgoingMessages.isEmpty())
+            return Error::NoError;
+        m_outgoingMessagesEmptyCondition.waitUntil(m_outgoingMessagesLock, timeout.deadline());
+    } while (!timeout.didTimeOut());
+    return Error::Timeout;
+}
+
 void Connection::invalidate()
 {
     m_isValid = false;
@@ -1041,6 +1054,12 @@ void Connection::connectionDidClose()
     }
     m_waitForMessageCondition.notifyAll();
 
+    {
+        Locker locker { m_outgoingMessagesLock };
+        m_outgoingMessages.clear();
+        m_outgoingMessagesEmptyCondition.notifyAll();
+    }
+
     if (m_didCloseOnConnectionWorkQueueCallback)
         m_didCloseOnConnectionWorkQueueCallback(this);
 
@@ -1062,8 +1081,10 @@ void Connection::sendOutgoingMessages()
 
         {
             Locker locker { m_outgoingMessagesLock };
-            if (m_outgoingMessages.isEmpty())
+            if (m_outgoingMessages.isEmpty()) {
+                m_outgoingMessagesEmptyCondition.notifyAll();
                 break;
+            }
             message = m_outgoingMessages.takeFirst().moveToUniquePtr();
         }
         ASSERT(message);
@@ -1235,7 +1256,7 @@ void Connection::dispatchMessage(Decoder& decoder)
 
 void Connection::dispatchMessage(std::unique_ptr<Decoder> message)
 {
-    if (!isValid())
+    if (!m_syncState)
         return;
     assertIsCurrent(dispatcher());
     {
